LendersApp/src/objects/ProgramMaster__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuyRateNew__c</fullName>
        <label>Factor Rate - New</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BuyRateRenewal__c</fullName>
        <label>Factor Rate - Renewal</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealScore__c</fullName>
        <label>Deal Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Factor_Rate_New__c</fullName>
        <label>Buy Rate - New</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factor_Rate_Renewal__c</fullName>
        <label>Buy Rate - Renewal</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gold_ISO_Commi__c</fullName>
        <label>Gold ISO Commi%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Master_Type__c</fullName>
        <label>Master Type</label>
        <picklist>
            <controllingField>Program_Type__c</controllingField>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Gross__c</fullName>
        <label>Max % Gross</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_ISO_Commi__c</fullName>
        <label>Max ISO Commi%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Open_Positions__c</fullName>
        <label>Max. Open Positions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Credit_Score__c</fullName>
        <label>Min. Credit Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Monthly_Gross_Sales__c</fullName>
        <label>Min. Monthly Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Offer_Amount__c</fullName>
        <label>Min. Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Time_in_business__c</fullName>
        <label>Min. Time in business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_on_Payback_Funded__c</fullName>
        <label>Rate on Payback/Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Payback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Days__c</fullName>
        <label>Term (Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (Months)</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upfront_Fee_Percentage__c</fullName>
        <label>Upfront Fee %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Upfront_Fees__c</fullName>
        <label>Upfront Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Use_Custom_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom Criteria</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program_Type__c</columns>
        <columns>Master_Type__c</columns>
        <columns>Term__c</columns>
        <columns>DealScore__c</columns>
        <columns>Active__c</columns>
        <columns>BuyRateNew__c</columns>
        <columns>Upfront_Fee_Percentage__c</columns>
        <columns>Upfront_Fees__c</columns>
        <columns>Max_Gross__c</columns>
        <columns>Max_Open_Positions__c</columns>
        <columns>Min_Offer_Amount__c</columns>
        <columns>Min_Credit_Score__c</columns>
        <columns>Min_Monthly_Gross_Sales__c</columns>
        <columns>Use_Custom_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Masters</pluralLabel>
    <recordTypes>
        <fullName>Active_Program_Master</fullName>
        <active>true</active>
        <label>Active Program Master</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Upfront_Fee_Rule</fullName>
        <active>true</active>
        <description>Only enter a value into either the Upfront Fee % or the Upfront Fee field.</description>
        <errorConditionFormula>NOT(ISNULL( Upfront_Fee_Percentage__c)) &amp;&amp; (NOT(ISNULL( Upfront_Fees__c )))</errorConditionFormula>
        <errorMessage>Please populate either Upfront Fee % or Upfront Fee</errorMessage>
    </validationRules>
</CustomObject>